.gitignore for maven

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,22 @@ Thumbs.db
 
 # Folder config file
 Desktop.ini
+
+###########
+# Maven
+###########
+.classpath
+.project
+.settings/
+.idea/
+*.iml
+*.iws
+.DS_Store
+log/
+target/
+
+###########
+# Project-specific
+###########
+
+*.wav
