--- a/TarsosDSP/pom.xml
+++ b/TarsosDSP/pom.xml
@@ -19,7 +19,15 @@
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
-            </plugin>    
+            </plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+				</configuration>
+			</plugin>
         </plugins>
 		<testResources>
 		  <testResource>
