--- a/TarsosDSP/pom.xml
+++ b/TarsosDSP/pom.xml
@@ -4,8 +4,14 @@
 
   <groupId>be.hogent.tarsos.dsp</groupId>
   <artifactId>TarsosDSP</artifactId>
-  <version>1.4</version>
+  <version>1.5</version>
   <packaging>jar</packaging>
+  <description>
+      TarsosDSP is a Java library for audio processing. 
+      Its aim is to provide an easy-to-use interface to practical musical signal processing algorithms 
+      implemented in pure Java and without any external dependencies.
+      It contains algorithms for pitch detection, time stretching, resampling and pitch shifting amongst others.   
+  </description>
 
   <name>TarsosDSP</name>
   <url>http://maven.apache.org</url>
