--- a/TarsosDSP/pom.xml
+++ b/TarsosDSP/pom.xml
@@ -1,35 +1,44 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>be.hogent.tarsos.dsp</groupId>
-  <artifactId>TarsosDSP</artifactId>
-  <version>1.5</version>
-  <packaging>jar</packaging>
-  <description>
+	<groupId>be.hogent.tarsos.dsp</groupId>
+	<artifactId>TarsosDSP</artifactId>
+	<version>1.6</version>
+	<packaging>jar</packaging>
+	<description>
       TarsosDSP is a Java library for audio processing. 
       Its aim is to provide an easy-to-use interface to practical musical signal processing algorithms 
       implemented in pure Java and without any external dependencies.
       It contains algorithms for pitch detection, time stretching, resampling and pitch shifting amongst others.   
   </description>
-  <name>TarsosDSP</name>
-  <url>http://tarsos.0110.be/tag/TarsosDSP</url>
-  
-  <scm>
-    <url>https://github.com/JorenSix/TarsosDSP.git</url>
-  </scm>
-	
+	<name>TarsosDSP</name>
+	<url>http://tarsos.0110.be/tag/TarsosDSP</url>
+
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
+
+	<scm>
+		<connection>scm:git:git@github.com:JorenSix/TarsosDSP.git</connection>
+		<url>https://github.com/JorenSix/TarsosDSP.git</url>
+		<developerConnection>scm:git:git@github.com:JorenSix/TarsosDSP.git</developerConnection>
+	</scm>
+
 	<build>
-	    <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-			
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -37,27 +46,41 @@
 				<configuration>
 				</configuration>
 			</plugin>
-        </plugins>
+		</plugins>
 		<testResources>
-		  <testResource>
-		    <directory>${project.basedir}/src/test/java</directory>
-		    <excludes>
-        		<exclude>*.java</exclude>
-   			</excludes>
-		  </testResource>
+			<testResource>
+				<directory>${project.basedir}/src/test/java</directory>
+				<excludes>
+					<exclude>*.java</exclude>
+				</excludes>
+			</testResource>
 		</testResources>
 	</build>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<developers>
+		<developer>
+			<name>Joren Six</name>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>GNU General Public License (GPL)</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+		</license>
+	</licenses>
+
 </project>
